# auth_app

./: .env.example  .gitignore  Docker-compose.yml  README.md
authorization_app/: Dockerfile  pyproject.toml
authorization_app/authorization_app/: settings.py  urls.py  wsgi.py
authorization_app/templates/: base.html  home.html
authorization_app/templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
authorization_app/templates/users/: change_email.html  change_password.html  edit_profile.html  profile.html  user_list.html
authorization_app/users/: accounts_urls.py  admin.py  forms.py  models.py  urls.py  views.py
authorization_app/users/migrations/: 0001_initial.py
