[project]
name = "auth-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Родион Гнутов",email = "rodion.gnutov.2000@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==4.2)",
    "django-allauth (==0.58.2)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-crispy-forms (>=2.4,<3.0)",
    "crispy-bootstrap5 (>=2025.6,<2026.0)",
    "django-extensions (>=4.1,<5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
